--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Unity_TopDown2D_Ujikom.sln"
+    "dotnet.defaultSolution": "Unity_TopDown2D_Ujikom-test-miaw.sln"
 }
